<resources>
    <string name="app_name">Here I am</string>
    <string name="maps">Maps</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">settings</string>
    <string name="title_activity_map">map</string>
    <string name="title_activity_maps">Mapss</string>
    <string name="call_for_help">Call For Help</string>
    <string name="title_activity_pin_settings">pin_settings</string>
    <string name="save">Save</string>
    <string name="enter_a_phone_number">Enter a phone number:</string>
    <string name="enter_a_location">enter a location</string>
    <string name="lattidue">Lattidue</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">latitude</string>
    <string name="Latitude">Latitude</string>
    <string name="enter_the_pincode">Enter the pincode:</string>
    <string name="change_pincode">Change Pincode</string>
    <string name="view_falls">View Falls</string>
    <string name="falls_detected">Falls Detected</string>
    <string name="did_you_fall">Did you fall?</string>
    <string name="reminders">Reminders</string>
    <string name="title_activity_to_do__list">ToDo_List</string>
    <string name="the_last_fall_are_shown_below">The last fall are shown below</string>
    <string name="medicine">Medicine</string>
    <string name="title_activity_medicine">medicine</string>
    <string name="title_activity_fall">Fall</string>
    <string name="enter_the_email_address">Enter the email address</string>
    <string name="count_down_time_in_seconds">Count down time in seconds</string>
    <string name="enter_the_safe_zone_radius_in_miles">Enter the safe zone radius in meters: </string>
    <string name="add_or_change_medicine">Add or change medicine</string>
    <string name="enter_the_medicine_name">Enter the medicine name</string>
    <string name="edit_medicine_list">Edit Medicine List</string>
    <string name="medicine_name">Medicine name</string>
    <string name="medicine_dose">Medicine dose</string>
    <string name="enter_the_safe_postcode">Enter the safe postcode</string>
    <string name="infomation">Infomation</string>
    <string name="background">background</string>
    <string name="photo">photo</string>
    <string name="change_infomation">Change Infomation</string>
    <string name="enter_the_patents_name">Enter the patents name</string>
    <string name="enter_the_patents_age">Enter the patents age</string>
    <string name="enter_the_patents_nhs_number">Enter the patents NHS number</string>
    <string name="enter_the_patents_phone_numer">Enter the patents phone numer</string>
    <string name="enter_the_patents_address">Enter the patents address</string>
    <string name="enter_the_safe_zone_address_or_postcode">Enter the safe zone address or postcode</string>
    <string name="title_activity_db">dbActivity</string>
    <string name="title_activity_med_db">MedDbActivity</string>
    <string name="title_activity_add_medicine">addMedicine</string>
    <string name="title_activity_med_db_no_edit">title activity med db no edit</string>
    <string name="information">Information</string>
    <string name="change_information">Change Information</string>
    <string name="preferred_radius_measurements">Preferred distance measurements</string>
    <string name="enter_the_carer_s_name">Enter the carer\'s name</string>
    <string name="enter_the_carer_s_phone_number">Enter the carer\'s phone number</string>
    <string name="enter_carer_s_id">Enter carer\'s ID</string>
</resources>
