<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:design="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.bsja9.hereiam.Activities.MainActivity">

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        design:menu="@menu/menu_navigation">

    </android.support.design.widget.BottomNavigationView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/call_button_home"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:backgroundTint="@color/buttonBlue"
            android:drawableLeft="@drawable/ic_local_phone_black_24dp"
            android:text="@string/call_for_help"
            android:textSize="20sp" />
        />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/View_falls"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_directions_walk_black_24dp"
                android:text="@string/view_falls"
                android:textSize="20sp"
                android:backgroundTint="@color/buttonsPurpleLight"
                />

            <Button
                android:id="@+id/ToDo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_assignment_black_24dp"
                android:text="@string/reminders"
                android:textSize="20sp"
                android:backgroundTint="@color/buttonsPurpleLight"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/medicine"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/pill"
                android:text="@string/medicine"
                android:textSize="20sp"
                android:backgroundTint="@color/buttonsPurpleLight"

                />

            <Button
                android:id="@+id/info_button"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableTop="@drawable/ic_info_black_24dp"
                android:text="@string/information"
                android:textSize="20sp"
                android:backgroundTint="@color/buttonsPurpleLight"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/timeAndDate"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textAlignment="center"
                />

            <android.widget.TextClock
                android:id="@+id/digitalClock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:format24Hour="k:mm:ss"
                android:format12Hour="@null"
                android:textSize="20sp"
                android:textAlignment="center"
                />

        </LinearLayout>




    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>
